user as guest create meet, read meet info, vote

--- a/frontend/src/lang/zh.json
+++ b/frontend/src/lang/zh.json
@@ -1,55 +1,54 @@
 {
-    "meets": "會議",
-    "calendar": "日曆",
-    "routine": "例行公事",
-    "settings": "設定",
-    "login": "登入",
+  "meets": "會議",
+  "calendar": "日曆",
+  "routine": "例行公事",
+  "settings": "設定",
+  "login": "登入",
 
-    "myMeets": "我的會議",
-    "name": "姓名",
-    "host": "主持人",
-    "votingPeriod": "投票時程",
-    "status": "狀態",
-    "votingDeadline": "投票截止日期",
-    "meetingTime": "會議時間",
-    "url": "Google Meet URL",
-    "endedVotes": "投票結束",
-    "voting": "正在投票",
-    "noData": "您的列表中目前尚未有會議",
+  "myMeets": "我的會議",
+  "name": "姓名",
+  "host": "主持人",
+  "votingPeriod": "投票時程",
+  "status": "狀態",
+  "votingDeadline": "投票截止日期",
+  "meetingTime": "會議時間",
+  "url": "Google Meet 連結",
+  "endedVotes": "投票結束",
+  "voting": "正在投票",
+  "noData": "您的列表中目前尚未有會議",
 
-    "welcome": "歡迎",
-    "save": "儲存",
-    "forgot": "忘記密碼",
-    "newToMeet": "尚未加入 Let's Meet 嗎？",
-    "resetPass": "重設密碼",
-    "sendVer": "傳送認證",
-    "signup": "註冊",
-    "already": "已經有帳號了嗎？",
-    "loginFailed": "登入失敗",
-    "linkedGoogle": "使用者名稱/信箱以被 Google 使用，請從 Google 登入",
-    "email": "信箱",
-    "username": "使用者名稱",
-    "password": "密碼",
-    "confirmPwd": "確認密碼",
-    "signupGoogle": "由 Google 登入",
-    "usernameExists": "使用者名稱已被使用",
-    "emailExist": "信箱已被使用",
-    "verSent": "認證信已寄出",
-    "checkMail": "請檢查郵箱",
-    "signupFailed": "註冊失敗",
+  "welcome": "歡迎",
+  "save": "儲存",
+  "forgot": "忘記密碼",
+  "newToMeet": "尚未加入 Let's Meet 嗎？",
+  "resetPass": "重設密碼",
+  "sendVer": "傳送認證",
+  "signup": "註冊",
+  "already": "已經有帳號了嗎？",
+  "loginFailed": "登入失敗",
+  "linkedGoogle": "使用者名稱/信箱以被 Google 使用，請從 Google 登入",
+  "email": "信箱",
+  "username": "使用者名稱",
+  "password": "密碼",
+  "confirmPwd": "確認密碼",
+  "signupGoogle": "由 Google 登入",
+  "usernameExists": "使用者名稱已被使用",
+  "emailExist": "信箱已被使用",
+  "verSent": "認證信已寄出",
+  "checkMail": "請檢查郵箱",
+  "signupFailed": "註冊失敗",
 
-    "joinMeet": "加入會議",
-    "createMeet": "創建會議",
-    "meetName": "會議名稱",
-    "startDate": "起始/終止日期",
-    "startTime": "起始/終止日期",
-    "member": "成員",
-    "description": "內容介紹",
-    "create": "創建",
-    "invitation": "邀請碼",
-    "myAva": "我的有空時間",
-    "groupAva": "群組有空時間",
-    
+  "joinMeet": "加入會議",
+  "createMeet": "創建會議",
+  "meetName": "會議名稱",
+  "startDate": "起始／終止日期",
+  "startTime": "起始／終止日期",
+  "member": "成員",
+  "description": "內容介紹",
+  "create": "創建",
+  "invitation": "邀請碼",
+  "myAva": "我的有空時間",
+  "groupAva": "群組有空時間",
 
-    "pageNotExists": "沒有頁面"
+  "pageNotExists": "沒有頁面"
 }
