--- a/frontend/src/lang/en.json
+++ b/frontend/src/lang/en.json
@@ -4,7 +4,6 @@
   "routine": "Routine",
   "settings": "Settings",
   "login": "Login",
-
   "myMeets": "My Meets",
   "name": "Name",
   "host": "Host",
@@ -12,11 +11,11 @@
   "status": "Status",
   "votingDeadline": "Voting Deadline",
   "meetingTime": "Meeting Time",
+  "invitationURL": "invitation URL",
   "url": "Google Meet URL",
   "endedVotes": "Ended Votes",
   "voting": "Voting",
   "noData": "There is no meets in your meeting list.",
-
   "welcome": "Welcome",
   "save": "Save",
   "forgot": "Forgot Password",
@@ -37,18 +36,32 @@
   "verSent": "Vertification mail sent",
   "checkMail": "Please check your mailbox.",
   "signupFailed": "Sign up failed",
-
   "joinMeet": "Join Meet",
   "createMeet": "Create Meet",
+  "confirmMeet": "Confirm Meet",
+  "leaveMeet": "Leave Meet",
+  "deleteMeet": "Delete Meet",
   "meetName": "Meet Name",
   "startDate": "Start / End Date",
   "startTime": "Start / End Time",
   "member": "Member",
   "description": "Description",
   "create": "Create",
+  "vote": "Vote",
+  "cancel": "Cancel",
+  "done": "Done",
   "invitation": "Invitation code",
   "myAva": "My Availability",
   "groupAva": "Group Availability",
-
-  "pageNotExists": "Page not exists"
+  "pageNotExists": "Page not exists",
+  "homePage": "Home Page",
+  "yes": "Yes",
+  "no": "No",
+  "deleteConfirm": "Are you sure you want to delete this meet?",
+  "leaveConfirm": "Are you sure you want to leave this meet?",
+  "needConfirmation": "Need Confirmation",
+  "confirmed": "Confirmed",
+  "confirming": "Confirming",
+  "unvoted": "Unvoted",
+  "voted": "Voted"
 }
