add date/time picker bilingual

--- a/frontend/src/lang/en.json
+++ b/frontend/src/lang/en.json
@@ -42,8 +42,12 @@
   "leaveMeet": "Leave Meet",
   "deleteMeet": "Delete Meet",
   "meetName": "Meet Name",
-  "startDate": "Start / End Date",
-  "startTime": "Start / End Time",
+  "selectDate": "Select Date",
+  "selectTime": "Select Time",
+  "startDate": "Start Date",
+  "endDate": "End Date",
+  "startTime": "Start Time",
+  "endTime": "End Time",
   "member": "Member",
   "description": "Description",
   "create": "Create",
