language some calendar & settings

--- a/frontend/src/lang/en.json
+++ b/frontend/src/lang/en.json
@@ -30,6 +30,7 @@
   "username": "Username",
   "password": "Password",
   "confirmPwd": "Confirm Password",
+  "confirmNewPwd": "Confirm New Password",
   "signupGoogle": "Sign up with Google",
   "usernameExists": "Username has already been registered.",
   "emailExist": "Email has already been registered.",
@@ -67,5 +68,28 @@
   "confirmed": "Confirmed",
   "confirming": "Confirming",
   "unvoted": "Unvoted",
-  "voted": "Voted"
+  "voted": "Voted",
+  "week": "Week",
+  "month": "Month",
+  "linkToGoogleCalendar": "Linked to Google Calendar",
+  "emailUpdated": "Please check your mailbox. Email will be updated in the Settings page after you verify your new email.",
+  "setInfo": "Set your account information",
+  "connect3": "Connect to third-party applications",
+  "changePreferences": "Change your notification preferences",
+  "accountSet": "Account Settings",
+  "thirdParty": "Third-Party Applications",
+  "notificationPreferences": "Notification Preferences",
+  "update": "Update",
+  "reset": "Reset",
+  "connectGoogle": "Connect with Google",
+  "connectLine": "Connect with LINE",
+  "connectLineEmail": "If you have connected with a LINE account, you can choose either LINE messages or Email as your notification preferences.",
+  "lineMessage": "LINE messages",
+  "changePwd": "Change Password",
+  "oldPwd": "Old Password",
+  "newPwd": "New Password",
+  "updateFailed": "Update failed",
+  "wrongPwd": "Wrong password",
+  "changePwdFailed": "Change password failed",
+  "scanQRcode": "Please scan QRcode to receive the messages."
 }
