--- a/frontend/src/lang/zh.json
+++ b/frontend/src/lang/zh.json
@@ -30,6 +30,7 @@
   "username": "使用者名稱",
   "password": "密碼",
   "confirmPwd": "確認密碼",
+  "confirmNewPwd": "確認新密碼",
   "signupGoogle": "由 Google 登入",
   "usernameExists": "使用者名稱已被使用",
   "emailExist": "信箱已被使用",
@@ -67,5 +68,28 @@
   "confirmed": "已確認",
   "confirming": "確認中",
   "unvoted": "未投票",
-  "voted": "已投票"
+  "voted": "已投票",
+  "week": "週",
+  "month": "月",
+  "linkToGoogleCalendar": "連結到 Google 日曆",
+  "emailUpdated": "請檢查信箱。認證之後會更新設定中的信箱",
+  "setInfo": "設定信箱資訊",
+  "connect3": "連接第三方應用程式",
+  "changePreferences": "更改你的通知偏好",
+  "accountSet": "帳號設定",
+  "thirdParty": "第三方應用程式",
+  "notificationPreferences": "通知偏好",
+  "update": "更新",
+  "reset": "重設",
+  "connectGoogle": "連結 Google",
+  "connectLine": "連結 LINE",
+  "connectLineEmail": "如果你已經連接 LINE 帳號，你可以選擇 LINE 訊息或是信箱來做認證",
+  "lineMessage": "LINE 訊息",
+  "changePwd": "更改密碼",
+  "oldPwd": "舊密碼",
+  "newPwd": "新密碼",
+  "updateFailed": "更新失敗",
+  "wrongPwd": "密碼錯誤",
+  "changePwdFailed": "更改密碼失敗",
+  "scanQRcode": "請掃描 QRcode 以接收訊息"
 }
