--- a/frontend/src/lang/zh.json
+++ b/frontend/src/lang/zh.json
@@ -97,5 +97,6 @@
   "howRoutine": "例行公事是什麼？",
   "markAva": "註記你不行的時間",
   "unavaBlock": "你不行的時間會顯示出來",
-  "inviteMeet": "當你被邀請到一個會議"
+  "inviteMeet": "當你被邀請到一個會議",
+  "allday": "全天"
 }
