--- a/frontend/src/lang/en.json
+++ b/frontend/src/lang/en.json
@@ -11,7 +11,7 @@
   "status": "Status",
   "votingDeadline": "Voting Deadline",
   "meetingTime": "Meeting Time",
-  "invitationURL": "invitation URL",
+  "invitationURL": "Invitation URL",
   "url": "Google Meet URL",
   "endedVotes": "Ended Votes",
   "voting": "Voting",
